<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.holys.allin1.MainActivity"
        android:padding="20dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:text="@string/browse"
            android:id="@+id/browseButton"
            android:onClick="browse_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/browseButton"
            android:text="@string/picture"
            android:layout_marginTop="-10dp"
            android:id="@+id/pictureButton"
            android:onClick="picture_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/pictureButton"
            android:layout_marginTop="-10dp"
            android:text="@string/call"
            android:id="@+id/callButton"
            android:onClick="call_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/callButton"
            android:layout_marginTop="-10dp"
            android:text="@string/mail"
            android:id="@+id/mapsButton"
            android:onClick="mail_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/mapsButton"
            android:layout_marginTop="-10dp"
            android:text="@string/sms"
            android:id="@+id/smsButton"
            android:onClick="sms_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/smsButton"
            android:layout_marginTop="-10dp"
            android:text="@string/facebook"
            android:id="@+id/facebookButton"
            android:onClick="facebook_ButtonClick"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/facebookButton"
            android:layout_marginTop="-10dp"
            android:text="@string/twitter"
            android:id="@+id/twitterButton"
            android:onClick="twitter_ButtonClick"
            android:textSize="20sp"/>

    </RelativeLayout>

</ScrollView>
